--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(exponentialchangeTree, speciationalTree, ouTree)
 export(disp.calc, dtt, dtt.full, ic.sigma)
 export(rate.estimate, crown.p, stem.p, crown.limits, stem.limits)
 export(name.check)
-export(fit.continuous, fit.discrete, prune.extinct.taxa, prune.random.taxa, rc)
+export(fitContinuous, fitDiscrete, prune.extinct.taxa, prune.random.taxa, rc)
 export(sim.char)
 export(tip.disparity)
-export(BDsim)
+export(BDsim, treedata, node.leaves)
