--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: geiger
 Type: Package
 Title: Analysis of evolutionary diversification
-Version: 1.0-91
-Date: 2007-10-19
-Author: Luke Harmon <lukeh@uidaho.edu>, Jason Weir, Chad Brock, Rich Glor, Wendell Challenger
+Version: 1.2-02
+Date: 2007-12-17
+Author: Luke Harmon <lukeh@uidaho.edu>, Jason Weir, Chad Brock, Rich Glor, Wendell Challenger, Gene Hunt
 Maintainer: Luke Harmon <lukeh@uidaho.edu>
 Depends: ape (>= 1.9-4), MASS, mvtnorm, msm, ouch
 Description: Running macroevolutionary simulation, and estimating parameters related to diversification from comparative phylogenetic data.
-License: GPL version 2 or greater
+License: GPL (>=2)
 URL: http://www.zoology.ubc.ca/~harmon
-Packaged: Fri Oct 19 09:09:39 2007; hornik
+Packaged: Thu Dec 20 09:55:08 2007; hornik
