--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,3 +8,5 @@ export(fitContinuous, fitDiscrete, prune.extinct.taxa, prune.random.taxa, rc)
 export(sim.char)
 export(tip.disparity)
 export(BDsim, treedata, node.leaves)
+export(getAncStates)
+export(runMedusa, summaryMedusa)
