--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,17 @@
 Package: geiger
 Type: Package
 Title: Analysis of evolutionary diversification
-Version: 1.2-14
-Date: 2008-11-20
-Author: Luke Harmon <lukeh@uidaho.edu>, Jason Weir, Chad Brock, Rich Glor, Wendell Challenger, Gene Hunt
+Version: 1.3-1
+Date: 2009-9-02
+Author: Luke Harmon <lukeh@uidaho.edu>, Jason Weir, Chad Brock, Rich
+        Glor, Wendell Challenger, Gene Hunt
 Maintainer: Luke Harmon <lukeh@uidaho.edu>
 Depends: ape (>= 1.9-4), MASS, mvtnorm, msm, ouch
-Description: Running macroevolutionary simulation, and estimating parameters related to diversification from comparative phylogenetic data.
-License: GPL (>=2)
+Description: Running macroevolutionary simulation, and estimating
+        parameters related to diversification from comparative
+        phylogenetic data.
+License: GPL (>= 2)
 URL: http://www.webpages.uidaho.edu/~lukeh/index.html
-Packaged: Thu Nov 20 09:21:01 2008; harmon
+Packaged: 2009-10-20 07:19:17 UTC; lukeh
+Repository: CRAN
+Date/Publication: 2009-10-20 09:33:19
