--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(birthdeath.tree)
 export(bm.lik)
 export(calibrate.rjmcmc)
 export(cherries)
+S3method(coef,gfit)
+S3method(coef,gfits)
 export(congruify.phylo)
 export(constrain)
 export(constrain.k)
@@ -62,6 +64,8 @@ export(linearchangeTree)
 export(Linnaean)
 export(load)
 S3method(load,rjmcmc)
+S3method(logLik,gfit)
+S3method(logLik,gfits)
 export(lookup.phylo)
 export(make.bm.relaxed)
 export(make.gbm)
@@ -90,6 +94,8 @@ S3method(print,rbm)
 S3method(print,rjmcmc)
 S3method(print,rjmcmcmc)
 S3method(print,transformer)
+export(prune.extinct.taxa)
+export(prune.random.taxa)
 export(rate.estimate)
 export(rc)
 export(rescaleTree)
