--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,23 @@
 Package: geiger
 Type: Package
 Title: Analysis of evolutionary diversification
-Version: 1.99-3.1
-Date: 2013-04-09
+Version: 2.0
+Date: 2013-05-15
 Author: Luke Harmon <lukeh@uidaho.edu>, Jason Weir, Chad Brock, Rich
-        Glor, Wendell Challenger, Gene Hunt, Rich FitzJohn, Matt
-        Pennell, Graham Slater, Joseph Brown, Josef Uyeda, and Jon
-        Eastman <jonathan.eastman@gmail.com>
-Maintainer: Jon Eastman <jonathan.eastman@gmail.com>
-Depends: R (>= 2.15.0), ape (>= 3.0-6)
-Imports: MASS, mvtnorm, msm, subplex, deSolve (>= 1.7), colorspace,
-        digest, Rcpp (>= 0.9.0), coda, ncbit
-Suggests: parallel
+        Glor, Wendell Challenger, Gene Hunt, Rich FitzJohn, Matt Pennell, Graham Slater, Joseph Brown, Josef Uyeda, and Jon Eastman <jonathan.eastman@gmail.com>
+Maintainer: Matt Pennell <mwpennell@gmail.com>
+Depends: ape (>= 3.0-6), R (>= 2.15.0)
+Imports: MASS, mvtnorm, subplex, deSolve (>= 1.7), digest, Rcpp (>=
+        0.9.0), coda
+Suggests: parallel, ncbit, pls, msm, colorspace
 LinkingTo: Rcpp
 Description: macroevolutionary simulation and parameter estimation
-        related to diversification from comparative phylogenetic data
+        related to diversification from comparative
+        phylogenetic data
 License: GPL (>= 2)
 URL: http://www.webpages.uidaho.edu/~lukeh/software.html
-Packaged: 2013-11-14 11:01:15 UTC; ripley
+ByteCompile: yes
+Packaged: 2014-02-10 18:16:48 UTC; mwp
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-11-14 12:12:31
+Date/Publication: 2014-02-10 21:06:00
