--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: geiger
 Type: Package
 Title: Analysis of evolutionary diversification
-Version: 2.0.1
-Date: 2014-02-10
+Version: 2.0.3
+Date: 2014-02-24
 Author: Luke Harmon <lukeh@uidaho.edu>, Jason Weir, Chad Brock, Rich
         Glor, Wendell Challenger, Gene Hunt, Rich FitzJohn, Matt Pennell, Graham Slater, Joseph Brown, Josef Uyeda, and Jon Eastman <jonathan.eastman@gmail.com>
 Maintainer: Matt Pennell <mwpennell@gmail.com>
@@ -17,7 +17,7 @@ Description: macroevolutionary simulation and parameter estimation
 License: GPL (>= 2)
 URL: http://www.webpages.uidaho.edu/~lukeh/software.html
 ByteCompile: yes
-Packaged: 2014-03-04 15:53:36 UTC; ripley
+Packaged: 2014-05-16 02:43:05 UTC; lukeharmon
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-03-07 07:26:46
+Date/Publication: 2014-05-16 07:52:50
