--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,20 @@
 Package: geiger
 Type: Package
-Title: Analysis of evolutionary diversification
-Version: 2.0.3
-Date: 2014-02-24
+Title: Analysis of Evolutionary Diversification
+Version: 2.0.5
+Date: 2015-09-02
 Author: Luke Harmon <lukeh@uidaho.edu>, Jason Weir, Chad Brock, Rich
         Glor, Wendell Challenger, Gene Hunt, Rich FitzJohn, Matt Pennell, Graham Slater, Joseph Brown, Josef Uyeda, and Jon Eastman <jonathan.eastman@gmail.com>
 Maintainer: Matt Pennell <mwpennell@gmail.com>
 Depends: ape (>= 3.0-6), R (>= 2.15.0)
 Imports: MASS, mvtnorm, subplex, deSolve (>= 1.7), digest, Rcpp (>=
-        0.9.0), coda
-Suggests: parallel, ncbit, pls, msm, colorspace
+        0.9.0), coda, ncbit, colorspace, methods
 LinkingTo: Rcpp
-Description: macroevolutionary simulation and parameter estimation
-        related to diversification from comparative
-        phylogenetic data
+Description: Methods for fitting macroevolutionary models to phylogenetic trees.
 License: GPL (>= 2)
 URL: http://www.webpages.uidaho.edu/~lukeh/software.html
 ByteCompile: yes
-Packaged: 2014-05-16 02:43:05 UTC; lukeharmon
 NeedsCompilation: yes
+Packaged: 2015-09-02 18:27:32 UTC; mwpennell
 Repository: CRAN
-Date/Publication: 2014-05-16 07:52:50
+Date/Publication: 2015-09-03 10:05:00
