--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ S3method(argn,bm)
 S3method(argn,default)
 S3method(argn,mkn)
 export("argn<-")
-export(as.phylo.hphylo)
+S3method(as.phylo,hphylo)
 export(bd.km)
 export(bd.ms)
 export(BDsim)
@@ -57,6 +57,7 @@ S3method(heights,phylo)
 export(hme)
 export(ic.sigma)
 export(is.constrained)
+export(is.extinct)
 export(is.phylo)
 export(is.root)
 export(kappaTree)
@@ -108,13 +109,13 @@ export(ratematrix)
 export(rc)
 export(rescaleTree)
 export(rjmcmc.bm)
-export(ROOT.ALL)
-export(ROOT.BOTH)
-export(ROOT.EQUI)
-export(ROOT.FLAT)
-export(ROOT.GIVEN)
-export(ROOT.MAX)
-export(ROOT.OBS)
+#export(ROOT.ALL)
+#export(ROOT.BOTH)
+#export(ROOT.EQUI)
+#export(ROOT.FLAT)
+#export(ROOT.GIVEN)
+#export(ROOT.MAX)
+#export(ROOT.OBS)
 #export(runMedusa)
 export(sem)
 export(sim.bd)
@@ -145,4 +146,19 @@ export(write.pathd8)
 export(write.r8s)
 export(write.treePL)
 import(MASS, digest, deSolve, coda, mvtnorm, subplex, Rcpp, ape)
-
+importFrom("grDevices", "col2rgb", "dev.interactive", "dev.new",
+           "gray.colors", "rgb")
+importFrom("graphics", "arrows", "layout", "legend", "lines", "mtext",
+           "par", "plot", "points", "polygon", "text")
+importFrom("methods", "as")
+importFrom("stats", "anova", "approxfun", "as.formula", "coef",
+           "density", "dexp", "dist", "dnorm", "dpois", "dunif",
+           "ecdf", "end", "lm", "logLik", "manova", "median",
+           "na.omit", "optim", "optimize", "qnorm", "quantile",
+           "reorder", "rexp", "rnorm", "runif", "sd", "spline",
+           "start", "summary.manova", "uniroot", "var",
+           "weighted.mean")
+importFrom("utils", "installed.packages", "modifyList",
+           "packageDescription", "packageVersion", "read.table",
+           "setTxtProgressBar", "tail", "txtProgressBar",
+           "write.table")
